# mckayla.blog

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  Makefile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
.forestry/: settings.yml
.github/workflows/: deploy.yml  main.yml  pages.yml
base/: notion.ts
content/posts/: a-tale-of-two-clang.md  addiction.md  all-you-need-is-data-and-functions.md  circular-references.md  contributing-a-package-to-debian.md  contributing-a-package-to-fedora.md  making-a-blog-with-rust.md  (+6 more)
ideas/: contributing-a-package-to-homebrew.md  react-hooks.md  the-right-way-to-publish-binaries-to-npm.md  the-right-way-to-publish-typescript-packages-to-npm.md
pages/: [titleSlug].tsx  _app.tsx  _document.tsx  index.tsx
posts/: 2020-in-summary.md  2021-in-summary.md  2022-in-summary.md  a-tale-of-two-clang.md  addiction.md  all-you-need-is-data-and-functions.md  assembly-including-you.md  august.md  bash-history.md  between-monopolies-and-fragmentation.md  circular-references.md  cute-banner-image.md  draft-1.md  example-post.json  gleam-traits.md  hello-computer.md  javascript-bad.md  making-a-blog-with-rust.md  oowijfoiwjef.md  raw.md  rust-for.md  test.md  were-all-doing-css-wrong.md  why-are-c-and-c++-so-complicated.md  why-circular-references-are-hard.md  writing-a-blog-in-rust.md  you-should-still-learn-c++.md
src/: blog.css  blog.rs  blog_post.html  blog_post.rs  config.rs  de.rs  external.rs  index.html  index_entry.rs  main.rs  options.rs  redirect_page.rs  redirects.rs  talk.rs
style/: puppy.css
(+23 files in other folders)
