[package]
name = "mckayla_blog"
version = "0.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
homepage = "https://github.com/aslilac/mckayla.blog"
repository = "https://github.com/aslilac/mckayla.blog"
edition = "2021"

[dependencies]
chrono = "0.4.22"
handlebars = "4.3.5"
# pocky = "0.2.0"
pocky = { path = "../../pocky/" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
