[package]
name = "mckayla_blog"
version = "0.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
homepage = "https://github.com/aslilac/mckayla.blog"
repository = "https://github.com/aslilac/mckayla.blog"
edition = "2021"

[dependencies]
chrono = "0.4.22"
handlebars = "4.3.5"
once_cell = "1.15.0"
pocky = "0.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
url = { version = "2.3.1", features = ["serde"] }
