[package]
name = "mckayla_blog"
version = "0.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
homepage = "https://github.com/aslilac/mckayla.blog"
repository = "https://github.com/aslilac/mckayla.blog"
edition = "2021"

[dependencies]
chrono = "0.4.26"
handlebars = "4.3.7"
once_cell = "1.18.0"
pulldown-cmark = "0.9.3"
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "1.0.102"
serde_yaml = "0.9.22"
url = { version = "2.4.0", features = ["serde"] }
